--- a/api-web/import-accesspoint.html
+++ b/api-web/import-accesspoint.html
@@ -38,7 +38,7 @@
   <body>
     <script>
       function myFunction() {
-        confirm("Added Data!");
+        //confirm("Added Data!");
       }
       </script>
     <div class="topnav">
