--- a/api-web/import-accesspoint.html
+++ b/api-web/import-accesspoint.html
@@ -38,11 +38,11 @@
   <body>
     <script>
       function myFunction() {
-        //confirm("Added Data!");
+        confirm("Added Data!");
       }
       </script>
     <div class="topnav">
-      <a class="active" href="http://localhost:3000/accesspoint">Back To Access Point List Page</a>
+      <a class="active" href="#">Import-AccessPoint-Excel</a>
     </div>
     <br/>
     <h2 class="mb-3">Import Access Point Excel Data To Database</h2>
